package ayizan;
option java_package = "ayizan.message.exchange";

enum Type
{
    PLACE_ORDER_INSTRUCTION = 101;
    CANCEL_REPLACE_ORDER_INSTRUCTION = 102;
    CANCEL_ORDER_INSTRUCTION = 103;
    ORDER_STATUS_INSTRUCTION = 104;


    ACCEPT_EXECUTION_EVENT = 201;
    TRADE_EXECUTION_EVENT = 202;
    REPLACE_EXECUTION_EVENT = 203;
    CANCEL_EXECUTION_EVENT = 204;
    STATUS_EXECUTION_EVENT = 205;
}
